--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <h3>Зимний спортивный инвентарь – направьте энергию детей в нужное русло!</h3>
     <p> В нашем каталоге представлены популярные зимние товары для детей с идеальным сочетанием их стоимости и качества. Весь ассортимент соответствует должным требованиям безопасности, и отечественные производители держат свою марку на должном уровне.</p>
     <p style="text-align:center; color:blue;font-size:20px"><p style="text-align:center; color:blue;font-size:20px">Цена транспорта: 1200 руб.-Тюбер/Ватрушка, 1400 руб.-Коньки, 1230 руб.-Лыжи беговые, 290 руб.-Ледянки.</p>
-    
+    <img src="https://cdn.pixabay.com/photo/2016/12/25/19/32/postcard-1930692_960_720.png" width="700px"height="650px/">
     <p>Что делать зимой?! Конечно же вставать на лыжи. Беговые лыжи это отличная возможность поддержания формы в межсезонье, а также веселое времяпровождение с друзьями.</p>
     <p>
         <img src="https://cdn.pixabay.com/photo/2018/12/12/08/06/graphic-3870316_960_720.png"/ height="100px">
